[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/hud/ui_progress_bar.gd" type="Script" id=1]
[ext_resource path="res://mods-unpacked/QianMo-QMtato/content/characters/crack_shot/crack_shot_monitor.gd" type="Script" id=2]
[ext_resource path="res://resources/fonts/actual/base/font_small_button.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui/hud/ui_lifebar_fill.png" type="Texture" id=4]
[ext_resource path="res://ui/hud/ui_lifebar_bg.png" type="Texture" id=5]
[ext_resource path="res://ui/hud/ui_lifebar_frame.png" type="Texture" id=6]
[ext_resource path="res://projectiles/slash/sprites/slash_0000.png" type="Texture" id=7]
[ext_resource path="res://mods-unpacked/QianMo-QMtato/content/characters/crack_shot/crack_shot_explosion_effect.tres" type="Resource" id=8]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )
aim_time = 5.0
exploding_effect = ExtResource( 8 )

[node name="ChargeBar" type="TextureProgress" parent="."]
margin_left = -95.0
margin_top = 20.0
margin_right = 225.0
margin_bottom = 68.0
rect_scale = Vector2( 0.6, 0.8 )
max_value = 15.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.156863, 1, 0, 1 )
script = ExtResource( 1 )
progress_color = Color( 0.172549, 1, 0.145098, 1 )

[node name="Hint" type="Label" parent="ChargeBar"]
anchor_left = 0.5
anchor_top = 0.458
anchor_right = 0.5
anchor_bottom = 0.458
margin_left = -120.0
margin_top = -13.61
margin_right = 1.0
margin_bottom = 17.39
rect_scale = Vector2( 2, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "12/25"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="ChargeBar"]

[node name="Animation" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Animation"]
visible = false
texture = ExtResource( 7 )

[node name="CastTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="CastTimer" to="." method="_on_CastTimer_timeout"]
